Added cover component

--- a/src/app/body/about/about.component.html
+++ b/src/app/body/about/about.component.html
@@ -1,3 +1,4 @@
-<p>
-  about works!
-</p>
+<div class="about-container">
+    <img id="aboutmephoto"src="http://via.placeholder.com/125x125">
+    <span>I am currently a Software Engineer at Fidelity Investments and a proud graduate from the University of North Texas with a Bachelor’s of Business Administration in Finance. My Finance degree and business knowledge has allowed me to better bridge gaps between business and technology. This knowledge afforded me to have a perspective that allows me to communicate ideas between different stakeholders of the software development life cycle. Since I began working at Fidelity Investments, I have had the opportunity to work in different lines of business where I worked on applications that had different technology stacks yet interfaced within the same development ecosystem. Each application brought its own set of experiences that gave me new ways to approach a problem. I feel that over the course of my time in the industry, I have refined my versatility and have become technology agnostic. I welcome the challenges my next endeavors will bring and hope they are as enriching as my last.</span>
+</div>
