--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,17 @@
-<mat-toolbar id="navbar">
-  <span id="logo">
-    Jaime Moncayo
-  </span>
-  <span class="fill-space"></span>
-  <span id="menu">
-    <i class="fa fa-bars" aria-hidden="true" id="menu"></i>
-  </span>
-</mat-toolbar>
+<nav class="navbar fixed-top">
+<!-- <span id="logo">
+  Jaime Moncayo hi
+  <i class="fa fa-bars" aria-hidden="true" id="menu"></i>
+</span> -->
+
+<ul>
+    <li id="logo"><a href="#">Jaime Moncayo</a></li>
+    <li class="nav-item"><a href="#">News</a></li>
+    <li class="nav-item"><a href="#">Contact</a></li>
+    <li class="nav-item"><a href="#">About</a></li>
+    <li class="nav-item"><a href="#">Contact</a></li>
+    <li class="nav-item"><a href="#">About</a></li>
+    <li id="menu"><a href="#"><i class="fa fa-bars" aria-hidden="true" id="menu"></i></a></li>
+  </ul>
+
+</nav>
