--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
     <app-navbar></app-navbar>
 </nav>
 <main>
-    <app-body></app-body>
+    <app-cover></app-cover>
+    <app-about></app-about>
+    <app-contact></app-contact>
 </main>
 <footer>
     <app-footer></app-footer>
