--- a/src/app/body/cover/cover.component.html
+++ b/src/app/body/cover/cover.component.html
@@ -1,1 +1,12 @@
-<img src="http://via.placeholder.com/1500x2000">
+<div id="cover">
+    <img src="http://via.placeholder.com/1000x2000">
+
+    <!-- Scroll Arrow -->
+    <section id="section07" class="demo">
+        <a href="#about-text">
+            <span></span>
+            <span></span>
+        </a>
+    </section>
+
+</div>
