--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,5 @@
     <app-contact></app-contact>
 </main>
 <footer>
-    <app-footer></app-footer>
+    <!-- <app-footer></app-footer> -->
 </footer>
