--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,6 @@
 /* Mobile Settings */
 @media only screen and (max-width: 735px) {
     :root {
-        background-color: red;
         --mobile-show: block;
         --desktop-show: none;
     }
@@ -12,7 +11,6 @@
 /* Desktop/Tablet Settings */
 @media only screen and (min-width: 735px) {
     :root {
-        background-color: lightblue;
         --mobile-show: none;
         --desktop-show: block;
         }
@@ -24,12 +22,15 @@
     --main-theme-color: white;
 }
 
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+html,body { 
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    
+     }
 img { 
     float: left;
     margin: 0;
     border: 0;
-    padding: 0;
 }
 
 main {
@@ -43,3 +44,93 @@ a:link {
 a:visited {
     text-decoration: none;
 }
+
+
+/* Arrow */
+
+  section {
+    position: relative;
+    top: 82vh;
+    width: 100%;
+    height: 100%;
+  }
+  section::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 80%;
+  }
+  
+  .demo a {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    z-index: 2;
+    display: inline-block;
+    -webkit-transform: translate(0, -50%);
+    transform: translate(0, -50%);
+    color: #fff;
+    font : normal 400 20px/1 'Josefin Sans', sans-serif;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .3s;
+  }
+  .demo a:hover {
+    opacity: .5;
+  }
+  
+  #section07 a span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 24px;
+    height: 24px;
+    margin-left: -12px;
+    border-left: 1px solid #fff;
+    border-bottom: 1px solid #fff;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    -webkit-animation: sdb07 2s infinite;
+    animation: sdb07 2s infinite;
+    opacity: 0;
+    box-sizing: border-box;
+  }
+  #section07 a span:nth-of-type(1) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+  }
+  #section07 a span:nth-of-type(2) {
+    top: 16px;
+    -webkit-animation-delay: .15s;
+    animation-delay: .15s;
+  }
+  #section07 a span:nth-of-type(3) {
+    top: 32px;
+    -webkit-animation-delay: .3s;
+    animation-delay: .3s;
+  }
+  @-webkit-keyframes sdb07 {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+  @keyframes sdb07 {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
+
