Added about me photo; Changes to Padding;

--- a/src/app/body/about/about.component.css
+++ b/src/app/body/about/about.component.css
@@ -4,10 +4,17 @@
     margin: 3em;
 }
 
+#about-text {
+    padding-top: 2em;
+}
 
 
 #aboutphoto {
     float: none;
     border-radius: 50%;
-
+    width: 40%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
