--- a/src/app/body/about/about.component.html
+++ b/src/app/body/about/about.component.html
@@ -1,13 +1,16 @@
 <div id="about">
     <div id="aboutphoto-container">
-        <img id="aboutphoto" src="http://via.placeholder.com/180x180">
-    </div>  
+        <img id="aboutphoto" src="https://avatars3.githubusercontent.com/u/41450290?s=400&u=e2d203f900cf7adc68cfdbdfff3f011f679226a9&v=4">
+    </div>
     <div id="about-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam non mollitia inventore velit blanditiis ex, temporibus modi
-        possimus labore, hic placeat iusto in eligendi culpa alias obcaecati deserunt itaque optio! Lorem ipsum dolor sit
-        amet consectetur adipisicing elit. Consectetur, voluptatibus necessitatibus vitae commodi ducimus accusantium provident
-        quisquam beatae id aspernatur dolores voluptatum labore facere distinctio fugit adipisci rerum. Laboriosam, nobis!
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda necessitatibus aperiam iste quaerat! Numquam,
-        inventore nobis rem nesciunt esse ratione, laboriosam dignissimos id, incidunt ad quo ducimus repellendus animi fugit.
+        I am currently a Software Engineer at Fidelity Investments and a proud graduate from the University of North Texas with a
+        Bachelor’s of Business Administration in Finance. My Finance degree and business knowledge has allowed me to better
+        bridge gaps between business and technology. This knowledge afforded me to have a perspective that allows me to communicate
+        ideas between different stakeholders of the software development life cycle. Since I began working at Fidelity Investments,
+        I have had the opportunity to work in different lines of business where I worked on applications that had different
+        technology stacks yet interfaced within the same development ecosystem. Each application brought its own set of experiences
+        that gave me new ways to approach a problem. I feel that over the course of my time in the industry, I have refined
+        my versatility and have become technology agnostic. I welcome the challenges my next endeavors will bring and hope
+        they are as enriching as my last.
     </div>
 </div>
