Added parallax scrolling to contact photo

--- a/src/app/body/about/about.component.html
+++ b/src/app/body/about/about.component.html
@@ -1,6 +1,9 @@
 <div id="about">
     <div id="aboutphoto-container">
         <img id="aboutphoto" src="https://avatars3.githubusercontent.com/u/41450290?s=400&u=e2d203f900cf7adc68cfdbdfff3f011f679226a9&v=4">
+        <h1 class="ribbon">
+            <strong class="ribbon-content" style="font-family: 'Lobster', cursive;">About Me</strong>
+         </h1>
     </div>
     <div id="about-text">
         I am currently a Software Engineer at Fidelity Investments and a proud graduate from the University of North Texas with a
