--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,11 +6,11 @@
 
 <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
-    <li class="nav-item"><a href="#">News</a></li>
+    <li class="nav-item"><a href="#contacct">Contact</a></li>
+    <li class="nav-item"><a href="#test">About me</a></li>
+    <!-- <li class="nav-item"><a href="#">About</a></li>
     <li class="nav-item"><a href="#">Contact</a></li>
-    <li class="nav-item"><a href="#">About</a></li>
-    <li class="nav-item"><a href="#">Contact</a></li>
-    <li class="nav-item"><a href="#">About</a></li>
+    <li class="nav-item"><a href="#">About</a></li> -->
     <li id="menu"><a href="#"><i class="fa fa-bars" aria-hidden="true" id="menu"></i></a></li>
   </ul>
 
