--- a/src/app/body/cover/cover.component.html
+++ b/src/app/body/cover/cover.component.html
@@ -1,5 +1,5 @@
 <div id="cover">
-    <img src="http://via.placeholder.com/1000x2000">
+    <img src="https://drive.google.com/uc?export=view&id=16nMYeilISuXBmEHxPuLFPszZF86LXYio">
 
     <!-- Scroll Arrow -->
     <section id="section07" class="demo">
@@ -10,3 +10,7 @@
     </section>
 
 </div>
+
+<!-- 
+mobile version
+https://drive.google.com/uc?export=view&id=1-LlUrm-RWJaNm5zUhbKa6TnXSk46_QX5 -->
