--- a/src/app/body/contact/contact.component.html
+++ b/src/app/body/contact/contact.component.html
@@ -1,4 +1,13 @@
-<span id="test"></span>
 <div id="contact">
-<div id="photo"></div>
+<div id="photo">
+    <a href="" target="_blank">
+        <i class="fa fa-github"></i>
+    </a>
+    <a href="" target="_blank">
+        <i class="fa fa-linkedin fa-fw"></i>
+    </a>
+    <a href="" target="_blank">
+        <i class="fa fa-free-code-camp fa-fw"></i>
+    </a>
+</div>
 </div>
