Contact icon styling

--- a/src/app/body/contact/contact.component.html
+++ b/src/app/body/contact/contact.component.html
@@ -1,13 +1,15 @@
 <div id="contact">
-<div id="photo">
-    <a href="" target="_blank">
-        <i class="fa fa-github"></i>
-    </a>
-    <a href="" target="_blank">
-        <i class="fa fa-linkedin fa-fw"></i>
-    </a>
-    <a href="" target="_blank">
-        <i class="fa fa-free-code-camp fa-fw"></i>
-    </a>
-</div>
+    <div id="photo">
+        <span id="contact-icons">
+            <a href="" target="_blank">
+                <i class="fa fa-github"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="fa fa-linkedin-square fa-fw"></i>
+            </a>
+            <a href="" target="_blank">
+                <i class="fa fa-free-code-camp fa-fw"></i>
+            </a>
+        </span>
+    </div>
 </div>
