--- a/src/app/body/contact/contact.component.css
+++ b/src/app/body/contact/contact.component.css
@@ -1,3 +1,6 @@
+#contact {
+    overflow: hidden;
+}
 #photo {
     width: 100%;
     height: 50vh;
@@ -6,8 +9,17 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50vh;
 }
 
-#contact {
-    overflow: hidden;
+
+
+.fa {
+    color:white;
+    font-size: 3em;
+    opacity: .6;
+    margin-left: .5em;
+    margin-right: .5em;
 }
