--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
 <main>
     <app-cover></app-cover>
     <app-about></app-about>
+    <app-experience></app-experience>
     <app-contact></app-contact>
 </main>
 <footer>
