Added experience section

--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,3 +1,5 @@
 <div id="experience">
-
+  <span id="experience-text">
+    <i id="bracket">[</i> I'm experienced with : <i>Angular</i> <i id="bracket">]</i>
+  </span>
 </div>
