--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <app-cover></app-cover>
     <app-about></app-about>
     <app-experience></app-experience>
+    <app-technologies></app-technologies>
     <app-contact></app-contact>
 </main>
 <footer>
