--- a/src/app/body/about/about.component.css
+++ b/src/app/body/about/about.component.css
@@ -10,11 +10,11 @@
     padding-top: 0;
     margin-top: 0;
     display: block;
-    margin: 10px 200px 15px;
     margin-right: var(--margin-text);
     margin-left: var(--margin-text);
     text-align-last: left;
     text-align: justify;
+    word-spacing:-1px;
     -moz-text-align-last: left;
     font-family: 'Roboto Slab',serif;
     font-weight: 400;
