Finalized first release

--- a/src/app/body/cover/cover.component.html
+++ b/src/app/body/cover/cover.component.html
@@ -1,9 +1,9 @@
 <div id="cover">
-    <img src="https://drive.google.com/uc?export=view&id=16nMYeilISuXBmEHxPuLFPszZF86LXYio">
+    <img src="../../../assets/c1.jpg">
 
     <!-- Scroll Arrow -->
     <section id="section07" class="demo">
-        <a href="#about-text">
+        <a href="#about">
             <span></span>
             <span></span>
         </a>
