--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -1,4 +1,4 @@
-<div class="technology">
+<div id="technology" style="height: 70vh">
     <h1>
         <div class="tech">
             TECHNOLOGIES
