--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar fixed-top">
-<!-- <span id="logo">
+  <!-- <span id="logo">
   Jaime Moncayo hi
   <i class="fa fa-bars" aria-hidden="true" id="menu"></i>
 </span> -->
 
-<ul>
+  <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
-    <li class="nav-item"><a href="#contacct">Contact</a></li>
-    <li class="nav-item"><a href="#test">About me</a></li>
-    <!-- <li class="nav-item"><a href="#">About</a></li>
-    <li class="nav-item"><a href="#">Contact</a></li>
-    <li class="nav-item"><a href="#">About</a></li> -->
+    <li class="nav-item"><a href="#technology">Technology</a></li>
+    <li class="nav-item"><a href="#experience">Experience</a></li>
+    <li class="nav-item"><a href="#contact">Contact</a></li>
+    <li class="nav-item"><a href="#about">About</a></li>
+    <!-- <li class="nav-item"><a href="#">About</a></li> -->
     <li id="menu"><a href="#"><i class="fa fa-bars" aria-hidden="true" id="menu"></i></a></li>
   </ul>
 
