--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
-<nav>
-    <app-navbar></app-navbar>
-</nav>
+<app-navbar>
+</app-navbar>
 <main>
     <app-cover></app-cover>
     <app-about></app-about>
@@ -8,6 +7,3 @@
     <app-technologies></app-technologies>
     <app-contact></app-contact>
 </main>
-<footer>
-    <!-- <app-footer></app-footer> -->
-</footer>
