--- a/src/app/body/technologies/technologies.component.scss
+++ b/src/app/body/technologies/technologies.component.scss
@@ -6,7 +6,7 @@
     display: block;   
     margin-left: auto;
     margin-right: auto;
-    width: 15vw;
+    width: var(--mobile-brands);
     max-height: 25vh;
     float: none;
 }
