--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,10 +2,41 @@
   letter-spacing: .025em;
   background-color: var(--main-theme-bgcolor);
   overflow: hidden;
-  height: 12vh;
+  height: var(--nav-height);
   z-index: 4;
 }
 
+#logo {
+  font-family: 'Lobster Two', cursive;
+  font-size: 5vh;
+  display: block;
+  text-align: left;
+  padding-top: var(--nav-logo-top);
+  margin-top: var(--nav-logo-m-top);
+  padding-left: 1em;
+  text-decoration: none;
+}
+
+#menu {
+  color: white;
+  float: right;
+  font-size: 4vh;
+  padding-right: 2.3vh;
+  padding-top: 1vh;
+  display: var(--mobile-show);
+}
+
+.nav-item {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 2.5vh;
+  font-weight: 400;
+  display: var(--desktop-show);
+  text-align: right;
+  padding-right: 1em;
+  padding-top: 4.6vh;
+  text-decoration: none;
+  float: right;
+}
 
 .fixed-top {
   position: fixed;
@@ -13,54 +44,25 @@
   width: 100%;
   top: 0;
 }
-.nav-item {
-    font-family: Open Sans,sans-serif;
-    font-size: 2.5vh;
-    font-weight: 400;
-    display: var(--desktop-show);
-    text-align: right;
-    padding-right: 1em;
-    padding-top: 4.6vh;
-    text-decoration: none;
-    float: right;
-}
-#logo {
-  font-family: 'Lobster Two', cursive;
-  font-size: 5vh;
-  display: block;
-  text-align: left;
-  padding-top: 1vh;
-  padding-left: 1em;
-  text-decoration: none;
-
-}
-
-#menu {
-  color:white; 
-  float: right; 
-  font-size: 4vh;
-  padding-right: 2.3vh;
-  padding-top: 2vh;
-  display: var(--mobile-show);
-}
 
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  
 }
 
 li {
   float: left;
 }
 
-a{
-  color: var(--main-theme-color);;
+a {
+  color: var(--main-theme-color);
+  ;
 }
 
 /* side nav */
+
 .sidenav {
   height: 100%;
   width: 100vw;
@@ -71,7 +73,6 @@ a{
   background-color: black;
   overflow-x: hidden;
   transition: 0.5s;
-
 }
 
 .sidenav a {
