--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,9 +20,9 @@
 </nav>
 <div class="title" style="display: none;">
 <div id="mySidenav" class="sidenav">
-  <a href="#about" (click)="SidebarVar=1">About</a>
-  <a href="#experience" (click)="SidebarVar=1">Experience</a>
-  <a href="#technology" (click)="SidebarVar=1">Technology</a>
-  <a href="#contact" (click)="SidebarVar=1">Contact</a>
+  <a href="#about" (click)="toggleTitle()">About</a>
+  <a href="#experience" (click)="toggleTitle()">Experience</a>
+  <a href="#technology" (click)="toggleTitle()">Technology</a>
+  <a href="#contact" (click)="toggleTitle()">Contact</a>
 </div>
 </div>
