--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,11 +18,14 @@
   </ul>
 
 </nav>
+
+
+<!-- Sidebar -->
 <div class="title" style="display: none;">
-<div id="mySidenav" class="sidenav">
-  <a href="#about" (click)="toggleTitle()">About</a>
-  <a href="#experience" (click)="toggleTitle()">Experience</a>
-  <a href="#technology" (click)="toggleTitle()">Technology</a>
-  <a href="#contact" (click)="toggleTitle()">Contact</a>
-</div>
+  <div id="mySidenav" class="sidenav">
+    <a href="#about" (click)="toggleTitle()">About</a>
+    <a href="#experience" (click)="toggleTitle()">Experience</a>
+    <a href="#technology" (click)="toggleTitle()">Technology</a>
+    <a href="#contact" (click)="toggleTitle()">Contact</a>
+  </div>
 </div>
