Fixed navbar issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,20 @@
 <app-navbar>
 </app-navbar>
 <main>
+    
     <app-cover></app-cover>
-    <app-about></app-about>
-    <app-experience></app-experience>
-    <app-technologies></app-technologies>
-    <app-contact></app-contact>
+
+    <section id="abt">
+        <app-about></app-about>
+    </section>
+    <section id="exp">
+        <app-experience></app-experience>
+    </section>
+    <section id="tech">
+        <app-technologies></app-technologies>
+    </section>
+    <section id="cont">
+        <app-contact></app-contact>
+    </section>
+
 </main>
