--- a/src/app/body/cover/cover.component.html
+++ b/src/app/body/cover/cover.component.html
@@ -1,15 +1,16 @@
-<div id="cover">
-    <img src="../../../assets/c1.jpg">
+<div id="cover" class="coverimg">
+    <!-- <img src="../../../assets/c1.jpg"> -->
 
     <!-- Scroll Arrow -->
-    <section id="section07" class="demo">
-        <a href="#about">
-            <span></span>
-            <span></span>
-        </a>
-    </section>
+
 
 </div>
+<section id="section07" class="demo">
+    <a href="#abt">
+        <span></span>
+        <span></span>
+    </a>
+</section>
 
 <!-- 
 mobile version
