--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,10 +6,10 @@
 
   <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
-    <li class="nav-item"><a href="#contact">Contact</a></li>
-    <li class="nav-item"><a href="#technology">Technology</a></li>
-    <li class="nav-item"><a href="#experience">Experience</a></li>
-    <li class="nav-item"><a href="#about">About</a></li>
+    <li class="nav-item"><a href="#cont">Contact</a></li>
+    <li class="nav-item"><a href="#tech">Technology</a></li>
+    <li class="nav-item"><a href="#exp">Experience</a></li>
+    <li class="nav-item"><a href="#abt">About</a></li>
     <!-- <li class="nav-item"><a href="#">About</a></li> -->
     <div id="open">
       <li id="menu"><i class="fa fa-bars" aria-hidden="true" id="menu"></i></li>
@@ -21,11 +21,11 @@
 
 
 <!-- Sidebar -->
-<div class="title" style="display: none;">
+<div class="sidebar" style="display: none;">
   <div id="mySidenav" class="sidenav">
-    <a href="#about" (click)="toggleTitle()">About</a>
-    <a href="#experience" (click)="toggleTitle()">Experience</a>
-    <a href="#technology" (click)="toggleTitle()">Technology</a>
-    <a href="#contact" (click)="toggleTitle()">Contact</a>
+    <a href="#about" (click)="toggleSidebar()">About</a>
+    <a href="#experience" (click)="toggleSidebar()">Experience</a>
+    <a href="#technology" (click)="toggleSidebar()">Technology</a>
+    <a href="#contact" (click)="toggleSidebar()">Contact</a>
   </div>
 </div>
