Added new section to display resume

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-navbar>
 </app-navbar>
 <main>
-    
+
     <app-cover></app-cover>
 
     <section id="abt">
@@ -10,11 +10,14 @@
     <section id="exp">
         <app-experience></app-experience>
     </section>
-    <section id="tech">
-        <app-technologies></app-technologies>
+    <app-technologies></app-technologies>
+    <section id="form">
+        <!-- <app-form></app-form> -->
     </section>
-    <section id="cont">
-        <app-contact></app-contact>
+    <section id="wait">
+        <app-resume></app-resume>
     </section>
+    <app-contact></app-contact>
+
 
 </main>
