--- a/src/app/body/technologies/technologies.component.html
+++ b/src/app/body/technologies/technologies.component.html
@@ -1,4 +1,4 @@
-<div id="technology" style="height: 70vh">
+<div id="technology">
     <h1>
         <div class="tech">
             TECHNOLOGIES
@@ -8,7 +8,15 @@
             I'VE WORKED WITH...
         </div>
         <div>
-            <img src="{{ this.img }}" id="fixed-width-tech">
+            <div id="imgone" class="fixed-width-tech" style="display:none;"><img src="../../../assets/angular.svg"></div>
+            <div id="imgtwo" class="fixed-width-tech" style="display:none;"><img src="../../../assets/HTML5_Logo.svg"></div>
+            <div id="imgthree" class="fixed-width-tech" style="display:none;"><img src="../../../assets/mongo.svg" style="width:var(--mobile-brands)"></div>
+            <div id="imgfour" class="fixed-width-tech" style="display:none;"><img src="../../../assets/gitlogo.png" style="width:var(--mobile-brands)"></div>
+            <div id="imgfive" class="fixed-width-tech" style="display:none;"><img src="../../../assets/nodeJS.png" style="width:var(--mobile-brands)"></div>
+            <div id="imgsix" class="fixed-width-tech" style="display:none;"><img src="../../../assets/oracle.png" style="width:var(--mobile-brands)"></div>
+            <div id="imgseven" class="fixed-width-tech" style="display:none;"><img src="../../../assets/jiralogo.svg" style="width:var(--mobile-brands)"></div>
+            <div id="imgeight" class="fixed-width-tech" style="display:none;"><img src="../../../assets/python.svg" style="width:var(--mobile-brands); height: 40%"></div>
+
         </div>
     </h1>
 </div>
