--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
     <li class="nav-item"><a href="#cont">Contact</a></li>
-    <li class="nav-item"><a href="#tech">Technology</a></li>
+    <li class="nav-item"><a href="#technology">Technology</a></li>
     <li class="nav-item"><a href="#exp">Experience</a></li>
     <li class="nav-item"><a href="#abt">About</a></li>
     <!-- <li class="nav-item"><a href="#">About</a></li> -->
@@ -23,9 +23,9 @@
 <!-- Sidebar -->
 <div class="sidebar" style="display: none;">
   <div id="mySidenav" class="sidenav">
-    <a href="#about" (click)="toggleSidebar()">About</a>
-    <a href="#experience" (click)="toggleSidebar()">Experience</a>
-    <a href="#technology" (click)="toggleSidebar()">Technology</a>
-    <a href="#contact" (click)="toggleSidebar()">Contact</a>
+    <a href="#abt" (click)="toggleSidebar()">About</a>
+    <a href="#exp" (click)="toggleSidebar()">Experience</a>
+    <a href="#tech" (click)="toggleSidebar()">Technology</a>
+    <a href="#cont" (click)="toggleSidebar()">Contact</a>
   </div>
 </div>
