Added contact form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,13 @@
         <app-experience></app-experience>
     </section>
     <app-technologies></app-technologies>
-    <section id="form">
-        <!-- <app-form></app-form> -->
-    </section>
+
     <section id="wait">
         <app-resume></app-resume>
+    </section>
+    
+    <section id="form">
+            <app-form></app-form>
     </section>
     <app-contact></app-contact>
 
