--- a/src/app/body/form/form.component.html
+++ b/src/app/body/form/form.component.html
@@ -1,3 +1,15 @@
-<p>
-  form works!
-</p>
+<div id="contact">
+
+  <div id="contact-form">
+
+    <form>
+      <label for="lname">Subject</label>
+      <input type="text" id="subject" name="subject" placeholder="Subject of message..">
+
+      <label for="Message">Message</label>
+      <textarea id="message" name="Message" placeholder="Write something.."></textarea>
+    </form>
+    <button id="submit" (click)="email()">Submit</button>
+  </div>
+
+</div>
