Minor changes for new production release

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,15 +10,18 @@
     <section id="exp">
         <app-experience></app-experience>
     </section>
+
+    
     <app-technologies></app-technologies>
 
-    <section id="wait">
+    <section id="res">
         <app-resume></app-resume>
     </section>
     
-    <section id="form">
-            <app-form></app-form>
-    </section>
+    <!-- <section id="form"> -->
+            <!-- <app-form></app-form> -->
+    <!-- </section> -->
+
     <app-contact></app-contact>
 
 
