--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,8 @@
 
   <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
-    <li class="nav-item"><a href="#cont">Contact</a></li>
+    <li class="nav-item"><a href="#contact">Contact</a></li>
+    <li class="nav-item"><a href="#res">About</a></li>
     <li class="nav-item"><a href="#technology">Technology</a></li>
     <li class="nav-item"><a href="#exp">Experience</a></li>
     <li class="nav-item"><a href="#abt">About</a></li>
@@ -25,7 +26,8 @@
   <div id="mySidenav" class="sidenav">
     <a href="#abt" (click)="toggleSidebar()">About</a>
     <a href="#exp" (click)="toggleSidebar()">Experience</a>
-    <a href="#tech" (click)="toggleSidebar()">Technology</a>
-    <a href="#cont" (click)="toggleSidebar()">Contact</a>
+    <a href="#technology" (click)="toggleSidebar()">Technology</a>
+    <a href="#res" (click)="toggleSidebar()">Resume</a>
+    <a href="#contact" (click)="toggleSidebar()">Contact</a>
   </div>
 </div>
