--- a/src/app/body/form/form.component.css
+++ b/src/app/body/form/form.component.css
@@ -1,10 +1,10 @@
 #contact-form {
     border: 1em black;
     border-style: solid;
-    width: 50%;
+    width: 60%;
     margin: auto;
     /* This is temporary */
-    height: 55vh;
+    height: 50vh;
     /* temp */
     transform: translate(0%, -5%);
 
@@ -18,6 +18,7 @@ form {
     font-size: 1.2em;
     font-weight: 800;
     line-height: 20px;
+    height: 55vh;
 }
 
 #contact {
@@ -28,13 +29,14 @@ form {
     width: 100%;
     background-color: transparent;
     color: black;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 0px 20px;
+    margin: 0px 0;
     border: none;
     cursor: pointer;
     font-family: 'Rubik','Roboto Slab', serif;
     font-size: 1.8em;
     font-weight: 800;
+    transform: translate(0%, -450%);
 }
 input[type=text], select {
     width: 100%;
