--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
   <ul>
     <li id="logo"><a href="#">Jaime Moncayo</a></li>
     <li class="nav-item"><a href="#contact">Contact</a></li>
-    <li class="nav-item"><a href="#res">About</a></li>
+    <li class="nav-item"><a href="#res">Resume</a></li>
     <li class="nav-item"><a href="#technology">Technology</a></li>
     <li class="nav-item"><a href="#exp">Experience</a></li>
     <li class="nav-item"><a href="#abt">About</a></li>
