--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top">
+<nav id='navbar' class="navbar fixed-top">
   <!-- <span id="logo">
   Jaime Moncayo hi
   <i class="fa fa-bars" aria-hidden="true" id="menu"></i>
